--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
         var pageTitle = "Casual Encounters or Something More? It's Up to You! 🔥";
         var pageParagraph = "Connect with people who are looking for the same thing as you: intense moments without commitment or even something more serious. Find compatible profiles, schedule dates and enjoy every moment. 😘";
         var backgroundVideo = "https://videos.pexels.com/video-files/8760575/8760575-hd_1080_1920_30fps.mp4"; // Exemplo de vídeo
-        var usLink = "https://t.slext2.com/205192/8517/35266?aff_sub5=SF_006OG000004lmDN";
-        var globalLink = "https://t.slext2.com/205192/3785/0?bo=2753,2754,2755,2756&target=domainredirects&po=6456&aff_sub5=SF_006OG000004lmDN";
+        var usLink = "https://t.slext2.com/205192/8517/0?aff_sub5=SF_006OG000004lmDN";
+        var globalLink = "https://bggcgce.pixloffrs.com/s/59cd6ef16fd92";
 
         document.title = pageTitle;
         document.getElementById("paragraph").innerText = pageParagraph;
@@ -100,7 +100,7 @@
                     i++;
                     setTimeout(typing, speed);
                 } else {
-                    setTimeout(redirectUser, 3000);
+                    setTimeout(redirectUser, 2000);
                 }
             }
             element.innerHTML = "";
