--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
   <div class="landing-container">
     <h1><span class="typing-container" id="title"></span></h1>
     <p id="paragraph"></p>
-    <button id="cta-button" class="action-button" style="display: none;">Acessar Agora</button>
+    <button id="cta-button" class="action-button" style="display: none;">Access Now</button>
   </div>
 
   <script>
