Update Script Sem Botão.html

--- a/Script Sem Botão.html
+++ b/Script Sem Botão.html
@@ -96,7 +96,7 @@
     const pageTitle = "Casual Encounters or Something More? It's Up to You! 🔥";
     const pageParagraph = "Connect with people who are looking for the same thing as you: intense moments without commitment or even something more serious. Find compatible profiles, schedule dates and enjoy every moment. 😘";
     const backgroundVideo = "https://videos.pexels.com/video-files/8760575/8760575-hd_1080_1920_30fps.mp4";
-    const usLink = "https://t.slext2.com/205192/8517/0?aff_sub5=SF_006OG000004lmDN";
+    const usLink = "https://t.mbdaad.link/205192/8517/0?aff_sub5=SF_006OG000004lmDN";
     const globalLink = "https://bggcgce.pixloffrs.com/s/59cd6ef16fd92";
 
     document.title = pageTitle;
