Update Script Sem Botão.html

--- a/Script Sem Botão.html
+++ b/Script Sem Botão.html
@@ -106,7 +106,7 @@
       🔥 <strong>You decide:</strong> a no-strings night, playful flirting, casual hangouts, or something more serious. Your vibe, your rules.
     </div>
 
-    <button id="cta-button" class="action-button" style="display: none;">Join Now & Play 🔥</button>
+    <button id="cta-button" class="action-button" style="display: none;">Join Now 🔥</button>
   </div>
 
   <script>
