Update Script Sem Botão.html

--- a/Script Sem Botão.html
+++ b/Script Sem Botão.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Ready for Wild Nights & Real Connections? 🔥</title>
+  <title>Meet, Flirt & Play!</title>
 
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-G0BVPQ1ETG"></script>
@@ -22,7 +22,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      height: 100vh;
+      min-height: 100vh;
       background-size: cover;
       background-position: center;
       color: white;
@@ -32,6 +32,7 @@
     .landing-container {
       background: rgba(0, 0, 0, 0.0);
       padding: 30px;
+      padding-top: 60px;
       border-radius: 15px;
       max-width: 850px;
       box-shadow: 0px 0px 25px rgba(255, 0, 0, 0.5);
@@ -99,7 +100,7 @@
 <body id="page-body">
   <div class="landing-container">
     <h1><span class="typing-container" id="title"></span></h1>
-    <h2 id="subtitle">Whatever you're craving, it starts right here.</h2>
+    <h2 id="subtitle">Whatever you're looking, it starts right here.</h2>
     <p id="paragraph"></p>
 
     <div class="you-decide">
