--- a/index.html
+++ b/index.html
@@ -21,25 +21,25 @@
       padding: 0;
       display: flex;
       justify-content: center;
-      align-items: center;
+      align-items: flex-start;
       min-height: 100vh;
       background-size: cover;
       background-position: center;
       color: white;
       text-align: center;
+      padding-top: 50px;
     }
 
     .landing-container {
       background: rgba(0, 0, 0, 0.0);
       padding: 30px;
-      padding-top: 60px;
       border-radius: 15px;
       max-width: 850px;
       box-shadow: 0px 0px 25px rgba(255, 0, 0, 0.5);
     }
 
     h1 {
-      font-size: 45px;
+      font-size: 42px;
       margin-bottom: 10px;
       background: linear-gradient(90deg, #ff6a00, #ee0979);
       -webkit-background-clip: text;
@@ -51,13 +51,13 @@
     }
 
     h2 {
-      font-size: 26px;
-      margin-bottom: 25px;
+      font-size: 24px;
+      margin-bottom: 20px;
     }
 
     p {
-      font-size: 20px;
-      margin-bottom: 25px;
+      font-size: 18px;
+      margin-bottom: 20px;
     }
 
     .typing-container {
@@ -74,8 +74,8 @@
     }
 
     .you-decide {
-      margin-top: 30px;
-      font-size: 22px;
+      margin-top: 25px;
+      font-size: 20px;
       color: #ffcc00;
     }
 
@@ -83,12 +83,12 @@
       background-color: #e91e63;
       border: none;
       color: white;
-      padding: 18px 36px;
+      padding: 16px 30px;
       text-align: center;
-      font-size: 22px;
+      font-size: 20px;
       border-radius: 12px;
       cursor: pointer;
-      margin-top: 20px;
+      margin-top: 18px;
       transition: background-color 0.3s ease;
     }
 
@@ -100,19 +100,19 @@
 <body id="page-body">
   <div class="landing-container">
     <h1><span class="typing-container" id="title"></span></h1>
-    <h2 id="subtitle">Whatever you're looking, it starts right here.</h2>
+    <h2 id="subtitle">Whatever you’re looking for, start here.</h2>
     <p id="paragraph"></p>
 
     <div class="you-decide">
-      🔥 <strong>You decide:</strong> a no-strings night, playful flirting, casual hangouts, or something more serious. Your vibe, your rules.
+      🔥 You decide: Your vibe, your rules.
     </div>
 
-    <button id="cta-button" class="action-button" style="display: none;">Join Now 🔥</button>
+    <button id="cta-button" class="action-button" style="display: none;">Join now 🔥</button>
   </div>
 
   <script>
-    const pageTitle = "Ready for Wild Nights & Real Connections? 🔥";
-    const pageParagraph = "Tired of boring apps and fake profiles? Meet real people nearby looking for exactly what you want — wild hookups, casual flirts, spicy chats, or maybe even a spark you didn't expect. It’s private, free to join, and totally up to you how far you take it.";
+    const pageTitle = "Ready for Wild Nights and Real Connections? 🔥";
+    const pageParagraph = "Tired of boring apps and fake profiles? Meet real people near you looking for exactly what you want — from casual encounters to something more serious. It’s private, free, and you decide how far you want to go.";
     const backgroundVideo = "https://videos.pexels.com/video-files/8760575/8760575-hd_1080_1920_30fps.mp4";
     const destino = "https://t.mbdaad.link/205192/8517/0?aff_sub5=SF_006OG000004lmDN";
 
