--- a/Script Sem Botão.html
+++ b/Script Sem Botão.html
@@ -22,25 +22,25 @@
       display: flex;
       justify-content: center;
       align-items: flex-start;
-      min-height: 100vh;
+      height: 100vh;
       background-size: cover;
       background-position: center;
       color: white;
       text-align: center;
-      padding-top: 50px;
     }
 
     .landing-container {
       background: rgba(0, 0, 0, 0.0);
-      padding: 30px;
+      padding: 20px;
       border-radius: 15px;
       max-width: 850px;
       box-shadow: 0px 0px 25px rgba(255, 0, 0, 0.5);
+      margin-top: 30px;
     }
 
     h1 {
-      font-size: 42px;
-      margin-bottom: 10px;
+      font-size: 36px;
+      margin-bottom: 8px;
       background: linear-gradient(90deg, #ff6a00, #ee0979);
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
@@ -51,8 +51,8 @@
     }
 
     h2 {
-      font-size: 24px;
-      margin-bottom: 20px;
+      font-size: 22px;
+      margin-bottom: 18px;
     }
 
     p {
@@ -74,7 +74,7 @@
     }
 
     .you-decide {
-      margin-top: 25px;
+      margin-top: 18px;
       font-size: 20px;
       color: #ffcc00;
     }
@@ -83,7 +83,7 @@
       background-color: #e91e63;
       border: none;
       color: white;
-      padding: 16px 30px;
+      padding: 14px 28px;
       text-align: center;
       font-size: 20px;
       border-radius: 12px;
@@ -104,7 +104,7 @@
     <p id="paragraph"></p>
 
     <div class="you-decide">
-      🔥 You decide: Your vibe, your rules.
+      🔥 <strong>You decide:</strong> Your vibe, your rules.
     </div>
 
     <button id="cta-button" class="action-button" style="display: none;">Join now 🔥</button>
@@ -148,7 +148,7 @@
         await delay(speed);
       }
 
-      await delay(700);
+      await delay(600);
       button.style.display = "inline-block";
     }
 
@@ -156,7 +156,7 @@
       window.location.href = destino;
     });
 
-    typeEffect(document.getElementById("title"), pageTitle, 130);
+    typeEffect(document.getElementById("title"), pageTitle, 120);
   </script>
 </body>
 </html>
