--- a/Script Sem Botão.html
+++ b/Script Sem Botão.html
@@ -113,8 +113,7 @@
   <script>
     const pageTitle = "Ready for Wild Nights and Real Connections? 🔥";
     const pageParagraph = "Tired of boring apps and fake profiles? Meet real people near you looking for exactly what you want — from casual encounters to something more serious. It’s private, free, and you decide how far you want to go.";
-    const backgroundVideo = "https://raw.githubusercontent.com/S4rtoriocf/MeetUpFun/main/Videos/Cama%2001%20(2).mp4"
-";
+    const backgroundVideo = "https://raw.githubusercontent.com/S4rtoriocf/MeetUpFun/main/Videos/Cama%2001%20(2).mp4";
     const destino = "https://t.mbdaad.link/205192/8517/0?aff_sub5=SF_006OG000004lmDN";
 
     document.title = pageTitle;
