--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
       🔥 <strong>You decide:</strong> Your vibe, your rules.
     </div>
 
-    <button id="cta-button" class="action-button" style="display: none;">Join now 🔥</button>
+    <button id="cta-button" class="action-button" style="display: none;">Access Now 🔥</button>
   </div>
 
   <script>
