--- a/index.html
+++ b/index.html
@@ -155,8 +155,8 @@
         .then(response => response.json())
         .then(data => {
           const country = data.country;
-          const linkUS = 'https://t.mbdaad.link/205192/8517/0?aff_sub5=SF_006OG000004lmDN';
-          const linkGlobal = 'https://t.mbdaad.link/205192/3785/0?target=domainredirects&aff_sub5=SF_006OG000004lmDN';
+          const linkUS = 'https://bggcgce.pixloffrs.com/s/59cd6ef16fd92';
+          const linkGlobal = 'https://bggcgce.pixloffrs.com/s/59cd6ef16fd92';
 
           // Registro de evento no Analytics
           gtag('event', 'click_offer_button', {
