Update Script Sem Botão.html

--- a/Script Sem Botão.html
+++ b/Script Sem Botão.html
@@ -119,10 +119,10 @@
     <p id="paragraph"></p>
 
     <div class="you-decide">
-      🔥 <strong>You decide:</strong> Your vibe, your rules.
+      🔥 <strong>You decide:</strong> At 50+, the only rule is to do what makes you feel good.
     </div>
 
-    <button id="cta-button" class="action-button" style="display:none;">Access Now 🔥</button>
+    <button id="cta-button" class="action-button" style="display:none;">Sign up for free 🔥</button>
   </div>
 
   <script>
