--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 
 <body>
   <video class="bg-video" autoplay loop muted playsinline>
-    <source src="https://raw.githubusercontent.com/S4rtoriocf/MeetUpFun/main/Videos/Cama%2001%20(2).mp4" type="video/mp4">
+    <source src="https://raw.githubusercontent.com/S4rtoriocf/MeetUpFun/main/Videos/video-novo.mp4" type="video/mp4">
   </video>
   <div class="overlay"></div>
 
