--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 
 <body>
   <video class="bg-video" autoplay loop muted playsinline>
-    <source src="https://cdn.jsdelivr.net/gh/S4rtoriocf/MeetUpFun@main/Videos/video-novo.mp4?v=999" type="video/mp4">
+    <source src="https://raw.githubusercontent.com/S4rtoriocf/MeetUpFun/main/Videos/video-novo.mp4" type="video/mp4">
   </video>
   <div class="overlay"></div>
 
