Update video source URL in index.html

--- a/index.html
+++ b/index.html
@@ -189,7 +189,8 @@
 <body>
   <!-- CORREÇÃO: Usando a URL que funcionava no script antigo -->
   <video class="bg-video" autoplay loop muted playsinline>
-    <source src="https://raw.githubusercontent.com/S4rtoriocf/MeetUpFun/main/Videos/video-novo.mp4" type="video/mp4">
+    <source src="https://raw.githubusercontent.com/aprivateinvite/MeetUpFun/main/Videos/video-novo.mp4
+" type="video/mp4">
   </video>
   
   <div class="overlay"></div>
